
2008-05-16 cjg 
 * Fixed bug in toolbox which prevented searching sub-objects and linked items.

2008-05-16 cjg 
 * Added boxes plugin system for EPrint summary pages.

2008-05-16 cjg 
 * Improved text-browsing for Items and Review screen-- use of alt tags on icons.

2008-05-16 cjg 
 * Added AJAX Phrase editor!

2008-05-19 tdb
 * Secured oai_accesslogs script
 * Fixed bug in Session::get_secure that returned false in Auth stage

2008-05-20 cjg
 * new Script option: as_string, which converts a typed value to a plain string. Useful for inserting a value into an attribute.
 * epc:phrase refs now expound out {} so values from the object can be used to build the phrase id.
 * Redesigned document citation to be neater and show all fields.
  
2008-05-20 cjg
 * Fixed some minor warnings in Views.pm
 * Added divisions to default eprint summary page.
 * Made subjects inside a "ifset" in summary page.
 * Added a divisions view.
 * Made the divisions view field link to the view.
 * Linked the divisions from the template.
 * Added "reverse" option to a view variation to list the groupings backwards. eg. for dates.

2008-05-20 cjg
 * Added policies page with a link to OpenDOAR.
 * Linked to policies page from default homepage.

2008-05-24 cjg
 * Added SWORD support.

======================================================================
EPRINTS-3.1-beta-3
======================================================================

2008-05-27 tdb
 * Added --description and --source-repository options to bin/import

2008-05-29 cjg
 * Fixed bug in rendering of XHTML values in EPScript.
 * Fixed some out-of-data apache methods in the VLit extension.
 * Fixed a typo in the toolbox code s/AND/ANY/
 * Fixed missing / with redirecting /perl/ to /cgi/

======================================================================
EPRINTS-3.1-rc-1
======================================================================