@@ -7459,3 +7459,7 @@ EPRINTS-3.1-beta-3
 ======================================================================
 EPRINTS-3.1-rc-1
 ======================================================================
+
+2008-06-04 tdb
+ * Fixed views not working for name-type metafields, fixing #3380
+
